@@ -1,5 +1,10 @@
 2011-04-06  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/lib/relocator.c (grub_relocator_alloc_chunk_align): Add few
+	useful grub_dprintf's.
+
+2011-04-06  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* include/grub/fs.h (grub_dirhook_info): Use unsigned for 1-bit fields.
 
 2011-04-06  Vladimir Serbinenko  <phcoder@gmail.com>
